# meshlab

./: CMakeLists.txt  README
misc/: vanilla_org_to_cmake_org.sh
src/: CMakeLists.txt
src/common/: CMakeLists.txt
src/meshlab/: CMakeLists.txt  customDialog.cpp  meshlab.pro
src/other/: CMakeLists.txt
src/other/levmar-2.6/: CMakeLists.txt
src/other/qhull/: CMakeLists.txt
src/plugins/: CMakeLists.txt
src/plugins/edit_align/: CMakeLists.txt
src/plugins/edit_align/align/: align_parameter.h
src/plugins/edit_arc3D/: CMakeLists.txt
src/plugins/edit_hole/: CMakeLists.txt
src/plugins/edit_manipulators/: CMakeLists.txt
src/plugins/edit_measure/: CMakeLists.txt
src/plugins/edit_paint/: CMakeLists.txt
src/plugins/edit_pickpoints/: CMakeLists.txt
src/plugins/edit_point/: CMakeLists.txt
src/plugins/edit_quality/: CMakeLists.txt
src/plugins/edit_select/: CMakeLists.txt
src/plugins/edit_slice/: CMakeLists.txt
src/plugins/edit_texture/: CMakeLists.txt
src/plugins/experimental/edit_ocme/: ocme_widget.ui
src/plugins/experimental/filter_mutualglobal/: solver.cpp  solver.h
src/plugins/fgt/filter_scan_merging/: filter_scan_merging.cpp
src/plugins/filter_aging/: CMakeLists.txt
src/plugins/filter_ao/: CMakeLists.txt
src/plugins/filter_autoalign/: CMakeLists.txt  filter_autoalign.cpp
src/plugins/filter_bnpts/: CMakeLists.txt
src/plugins/filter_camera/: CMakeLists.txt
src/plugins/filter_clean/: CMakeLists.txt  align_tools.cpp  align_tools.h
src/plugins/filter_color_projection/: CMakeLists.txt
src/plugins/filter_colorize/: CMakeLists.txt
src/plugins/filter_colorproc/: CMakeLists.txt
src/plugins/filter_create/: CMakeLists.txt
src/plugins/filter_csg/: CMakeLists.txt
src/plugins/filter_dirt/: CMakeLists.txt
src/plugins/filter_feature_alignment/: CMakeLists.txt  feature_alignment.h  feature_msc.h  filter_feature_alignment.cpp
src/plugins/filter_fractal/: CMakeLists.txt
src/plugins/filter_func/: CMakeLists.txt
src/plugins/filter_img_patch_param/: CMakeLists.txt
src/plugins/filter_isoparametrization/: CMakeLists.txt  param_collapse.h  parametrizator.h
src/plugins/filter_layer/: CMakeLists.txt
src/plugins/filter_measure/: CMakeLists.txt
src/plugins/filter_meshing/: CMakeLists.txt
src/plugins/filter_mls/: CMakeLists.txt
src/plugins/filter_mutualinfoxml/: CMakeLists.txt  levmarmethods.h  solver.h
src/plugins/filter_plymc/: CMakeLists.txt
src/plugins/filter_poisson/: CMakeLists.txt
src/plugins/filter_qhull/: CMakeLists.txt  qhull_tools.h
src/plugins/filter_quality/: CMakeLists.txt
src/plugins/filter_sampling/: CMakeLists.txt
src/plugins/filter_sdf/: CMakeLists.txt
src/plugins/filter_sdfgpu/: CMakeLists.txt
src/plugins/filter_select/: CMakeLists.txt
src/plugins/filter_ssynth/: CMakeLists.txt  filter_ssynth.cpp  filter_ssynth.h
src/plugins/filter_texture/: CMakeLists.txt
src/plugins/filter_trioptimize/: CMakeLists.txt
src/plugins/filter_unsharp/: CMakeLists.txt
src/plugins/filter_zippering/: CMakeLists.txt
src/plugins/io_3ds/: CMakeLists.txt
src/plugins/io_base/: CMakeLists.txt
src/plugins/io_bre/: CMakeLists.txt
src/plugins/io_collada/: CMakeLists.txt
src/plugins/io_ctm/: CMakeLists.txt
src/plugins/io_expe/: CMakeLists.txt
src/plugins/io_gts/: CMakeLists.txt
src/plugins/io_json/: CMakeLists.txt
src/plugins/io_pdb/: CMakeLists.txt
src/plugins/io_tri/: CMakeLists.txt
src/plugins/io_u3d/: CMakeLists.txt
src/plugins/io_x3d/: CMakeLists.txt
src/plugins/standard/: CMakeLists.txt
src/plugins/standard/edit_align/: edit_align.qrc
src/plugins/standard/edit_align/align/: align_parameter.h
src/plugins/standard/edit_quality/: eqhandle.cpp
src/plugins/standard/edit_quality/personalProjects/: meshlabv11_plus_quality_mapper.pro  readme.txt
src/plugins/standard/edit_slice/: editslice.h
src/plugins/standard/filter_autoalign/: filter_autoalign.cpp  filter_autoalign.pro
src/plugins/standard/filter_clean/: align_tools.cpp  align_tools.h
src/plugins/standard/filter_csg/: filter_csg.pro
src/plugins/standard/filter_feature_alignment/: feature_alignment.h  feature_msc.h  filter_feature_alignment.cpp
src/plugins/standard/filter_isoparametrization/: filter_isoparametrization.pro
src/plugins/standard/filter_mutualinfoxml/: solver.h
src/plugins/standard/filter_qhull/: filter_qhull.pro  qhull_tools.h
src/plugins/standard/filter_sdfgpu/: filter_sdfgpu.pro
src/plugins/standard/filter_ssynth/: filter_ssynth.cpp  filter_ssynth.h  filter_ssynth.pro
src/plugins/unsupported/edit_phototexturing/src/Tsai/: TsaiCameraCalibration.h
src/plugins/unsupported/filter_curvature_from_sliding/: curvature_from_sliding.h
src/plugins/unsupported/filter_mutualinfo/: levmarmethods.h
src/server/: meshlabserver.pro
